...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintWidth_max="@dimen/content_max_width">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/memberList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingStart="@dimen/space_s"
            android:paddingEnd="@dimen/space_s"
            android:paddingTop="@dimen/space_s"
...
