...
                    android:text="@string/home_clear_search" />
            </LinearLayout>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/newOrderFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/space_l"
        android:text="@string/action_new_order"
        app:icon="@drawable/ic_add" />
...
